--- a/content/about/index.html
+++ b/content/about/index.html
@@ -19,13 +19,13 @@
               href="https://discord.com/users/1050531216589332581"
               target="_blank"
               ><img
-                src="/assets/imgs/discord.png"
+                src="/assets/imgs/october/discord.png"
                 class="social-logo"
                 alt="Discord"
             /></a>
             <a href="https://github.com/tayrp" target="_blank"
               ><img
-                src="/assets/imgs/github.png"
+                src="/assets/imgs/october/github.png"
                 class="social-logo"
                 alt="Github"
             /></a>
@@ -37,13 +37,13 @@
             /></a>
             <a href="https://www.last.fm/user/MystixMew" target="_blank"
               ><img
-                src="/assets/imgs/lastfm.png"
+                src="/assets/imgs/october/lastfm.png"
                 class="social-logo"
                 alt="Last.fm"
             /></a>
             <a href="https://www.youtube.com/@MystixMew" target="_blank"
               ><img
-                src="/assets/imgs/youtube.png"
+                src="/assets/imgs/october/youtube.png"
                 class="social-logo"
                 alt="YouTube"
             /></a>
@@ -52,7 +52,7 @@
         </div>
         <video autoplay loop id="aboutvideo">
           <source
-            src="https://index.havenmc.org/website/assets/mp4/candycoatedlies.mp4"
+            src="https://index.havenmc.org/website/assets/mp4/thisishalloween.mp4"
             type="video/mp4"
           />
           This browser does not support HTML5 video or the server is offline.
@@ -75,6 +75,7 @@
           style="
             font-size: 27px;
             padding: 0;
+            color: #FC4C02;
             width: 30px;
             height: 30px;
             line-height: 27px;
