--- a/public/about/index.html
+++ b/public/about/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
-    <script src="assets/js/disableFullscreen.js"></script>
   </head>
 
   <body>
@@ -36,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/" style="color: white">
             Tee
             <img
               id="dcstat"
@@ -87,13 +86,13 @@
               href="https://discord.com/users/1050531216589332581"
               target="_blank"
               ><img
-                src="/assets/imgs/discord.png"
+                src="/assets/imgs/october/discord.png"
                 class="social-logo"
                 alt="Discord"
             /></a>
             <a href="https://github.com/tayrp" target="_blank"
               ><img
-                src="/assets/imgs/github.png"
+                src="/assets/imgs/october/github.png"
                 class="social-logo"
                 alt="Github"
             /></a>
@@ -105,13 +104,13 @@
             /></a>
             <a href="https://www.last.fm/user/MystixMew" target="_blank"
               ><img
-                src="/assets/imgs/lastfm.png"
+                src="/assets/imgs/october/lastfm.png"
                 class="social-logo"
                 alt="Last.fm"
             /></a>
             <a href="https://www.youtube.com/@MystixMew" target="_blank"
               ><img
-                src="/assets/imgs/youtube.png"
+                src="/assets/imgs/october/youtube.png"
                 class="social-logo"
                 alt="YouTube"
             /></a>
@@ -120,7 +119,7 @@
         </div>
         <video autoplay loop id="aboutvideo">
           <source
-            src="https://index.havenmc.org/website/assets/mp4/candycoatedlies.mp4"
+            src="https://index.havenmc.org/website/assets/mp4/thisishalloween.mp4"
             type="video/mp4"
           />
           This browser does not support HTML5 video or the server is offline.
@@ -143,6 +142,7 @@
           style="
             font-size: 27px;
             padding: 0;
+            color: #FC4C02;
             width: 30px;
             height: 30px;
             line-height: 27px;
@@ -198,12 +198,20 @@
 </main>
 
     <footer>
+      
+      Credits:
+      <a
+        href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background"
+        >Vecteezy.com</a
+      >
+      (Background)
       <div class="container">
         <div class="row">
           &copy;
           <b
             >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved. Made with 🩷 by <a href="https://github.com/tayrp">Tee</a></b
+            All rights reserved. Made with 🩷 by
+            <a href="https://github.com/tayrp">Tee</a></b
           >
         </div>
       </div>
