--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
-    <script src="assets/js/disableFullscreen.js"></script>
   </head>
 
   <body>
@@ -37,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/" style="color: white">
             Tee
             <img
               id="dcstat"
@@ -88,12 +87,20 @@
 </main>
 
     <footer>
+      
+      Credits:
+      <a
+        href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background"
+        >Vecteezy.com</a
+      >
+      (Background)
       <div class="container">
         <div class="row">
           &copy;
           <b
             >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved. Made with 🩷 by <a href="https://github.com/tayrp">Tee</a></b
+            All rights reserved. Made with 🩷 by
+            <a href="https://github.com/tayrp">Tee</a></b
           >
         </div>
       </div>
