Updated smthn because I think it looks kinda cool.

--- a/public/index.html
+++ b/public/index.html
@@ -67,22 +67,28 @@
     
 <main>
   <div class="about">
-    <div>
-      <b id="date-time">time</b>
-      <script src="/assets/js/timezone.js"></script>
-      <p>Hello and Welcome, You may call me Tee.</p>
-      <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
-      <p>My preferred pronouns are She/They</p>
-      <p>
-        Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.
-      </p>
-      <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
-      <p style="font-size: 20px">
-        <a href="https://nohello.net/en/">NoHello</a> |
-        <a href="https://dontasktoask.com/">DontAskToAsk</a> |
-        <a href="https://xyproblem.info/">XYProblem</a>
-      </p>
-    </div>
+    <div style="background: #ed9458; border-radius: 25px;
+            font-size: 20px; 
+            padding: 10px; 
+            border: 1px solid lightgray; 
+            margin: 10px;">
+            <div>
+              <b id="date-time">time</b>
+              <script src="/assets/js/timezone.js"></script>
+              <p>Hello and Welcome, You may call me Tee.</p>
+              <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
+              <p>My preferred pronouns are She/They</p>
+              <p>
+                Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.
+              </p>
+              <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
+              <p style="font-size: 20px">
+                <a href="https://nohello.net/en/">NoHello</a> |
+                <a href="https://dontasktoask.com/">DontAskToAsk</a> |
+                <a href="https://xyproblem.info/">XYProblem</a>
+              </p>
+            </div>
+</div>
   </div>
 </main>
 
