--- a/public/salad/index.html
+++ b/public/salad/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="https://api.lanyard.rest/1050531216589332581.jpg" />
-    <script src="assets/js/disableFullscreen.js"></script>
+    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
   </head>
 
   <body>
@@ -36,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="/" style="color: white">
             Tee
             <img
               id="dcstat"
@@ -92,12 +91,20 @@
 </main>
 
     <footer>
+      
+      Credits:
+      <a
+        href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background"
+        >Vecteezy.com</a
+      >
+      (Background)
       <div class="container">
         <div class="row">
           &copy;
           <b
             >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved. Made with 🩷 by <a href="https://github.com/tayrp">Tee</a></b
+            All rights reserved. Made with 🩷 by
+            <a href="https://github.com/tayrp">Tee</a></b
           >
         </div>
       </div>
