Adding a little rectangle background to the footer

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -198,6 +198,12 @@
 </main>
 
     <footer>
+      <div style="background: #ed9458; border-radius: 25px;
+      font-size: 20px; 
+      width: 5px
+      padding: 10px; 
+      border: 1px solid #FFFFFF;
+      margin: 5px;">
       
       Credits:
       <a
