--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <div style="background: #ed9458; border-radius: 25px;
             font-size: 20px; 
             padding: 10px; 
-            border: 1px solid lightgray; 
+            border: 1px solid #FFFFFF; 
             margin: 10px;">
             <div>
               <b id="date-time">time</b>
@@ -93,6 +93,12 @@
 </main>
 
     <footer>
+      <div style="background: #ed9458; border-radius: 25px;
+      font-size: 20px; 
+      width: 5px
+      padding: 10px; 
+      border: 1px solid #FFFFFF;
+      margin: 5px;">
       
       Credits:
       <a
