--- a/public/index.html
+++ b/public/index.html
@@ -93,12 +93,6 @@
 </main>
 
     <footer>
-      <div style="background: #ed9458; border-radius: 25px;
-      font-size: 20px; 
-      width: 5px
-      padding: 10px; 
-      border: 1px solid #FFFFFF;
-      margin: 5px;">
       
       Credits:
       <a
@@ -107,13 +101,27 @@
       >
       (Background)
       <div class="container">
-        <div class="row">
-          &copy;
-          <b
-            >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved. Made with 🩷 by
-            <a href="https://github.com/tayrp">Tee</a></b
-          >
+        <div
+          style="
+            background: #ed9458;
+            border-radius: 25px;
+            font-size: 20px;
+            width: 650px;
+            padding: 10px;
+            border: 1px solid #ffffff;
+            margin: 5px auto;
+            text-align: center;
+          "
+        >
+          <div class="row">
+            &copy;
+            <b
+              >2024
+              <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All
+              rights reserved. Made with 🩷 by
+              <a href="https://github.com/tayrp">Tee</a></b
+            >
+          </div>
         </div>
       </div>
     </footer>
