Hyperlink colors again

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     
 <main>
   <div class="about">
-    <div style="background: #ed9458; border-radius: 25px;
+    <div style="background: #FC4C02; border-radius: 25px;
             font-size: 20px; 
             padding: 10px; 
             border: 1px solid #FFFFFF; 
@@ -103,7 +103,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #FC4C02;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
