--- a/public/about/index.html
+++ b/public/about/index.html
@@ -208,7 +208,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #FC4C02;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
