Updated it again, I am addicted to perfection.

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -88,13 +88,27 @@
       >
       (Background)
       <div class="container">
-        <div class="row">
-          &copy;
-          <b
-            >2024 <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>.
-            All rights reserved. Made with 🩷 by
-            <a href="https://github.com/tayrp">Tee</a></b
-          >
+        <div
+          style="
+            background: #FC4C02;
+            border-radius: 25px;
+            font-size: 20px;
+            width: 650px;
+            padding: 10px;
+            border: 1px solid #ffffff;
+            margin: 5px auto;
+            text-align: center;
+          "
+        >
+          <div class="row">
+            &copy;
+            <b
+              >2024
+              <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All
+              rights reserved. Made with 🩷 by
+              <a href="https://github.com/tayrp">Tee</a></b
+            >
+          </div>
         </div>
       </div>
     </footer>
