--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
+          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
+            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
+          </a>                    
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
