Updated some other pages to have the small bg

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -4,6 +4,13 @@
     <div>
       <body>
         <div class="content">
+          <div>
+            <div style="background: #ed9458; border-radius: 25px;
+            font-size: 20px; 
+            padding: 10px; 
+            border: 1px solid #FFFFFF; 
+            margin: 10px;">
+            <div>
           <h1>Hiya, Call me Tee!</h1>
           <iframe
             width="570"
@@ -11,7 +18,7 @@
             src="https://lanyard.cnrad.dev/api/1050531216589332581"
             frameborder="0"
             allowfullscreen="false"
-            style="margin-left: 35px"
+            style="margin-left: 15px"
           ></iframe>
           <!-- <h4>Someone told me I had shit taste in music when I showed them this song, so I put it on my website, Fuck you.</h4> -->
           <div id="images">
