--- a/public/about/index.html
+++ b/public/about/index.html
@@ -45,6 +45,9 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
+          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
+            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
+          </a>                    
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -71,6 +74,13 @@
     <div>
       <body>
         <div class="content">
+          <div>
+            <div style="background: #ed9458; border-radius: 25px;
+            font-size: 20px; 
+            padding: 10px; 
+            border: 1px solid #FFFFFF; 
+            margin: 10px;">
+            <div>
           <h1>Hiya, Call me Tee!</h1>
           <iframe
             width="570"
@@ -78,7 +88,7 @@
             src="https://lanyard.cnrad.dev/api/1050531216589332581"
             frameborder="0"
             allowfullscreen="false"
-            style="margin-left: 35px"
+            style="margin-left: 15px"
           ></iframe>
           <!-- <h4>Someone told me I had shit taste in music when I showed them this song, so I put it on my website, Fuck you.</h4> -->
           <div id="images">
