--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -1,6 +1,12 @@
 <main>
   <div class="about">
     <div>
+      <div style="background: #ed9458; border-radius: 25px;
+      font-size: 20px; 
+      padding: 10px; 
+      border: 1px solid #FFFFFF; 
+      margin: 10px;">
+      <div>
       <p>A list of all pages on my website.</p>
       <p>Some are hidden, like Eastereggs.</p>
       <li><a href="/">Home</a> - Takes you to my home page.</li>
@@ -8,9 +14,7 @@
       <li><a href="/projects">Projects</a> - Takes you to my Projects page.</li>
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
-      <li><a href="/readme">README</a> - Takes you to my README page.</li>
-      <li><a href="https://hugo.mysty.one/">Local Website</a> - Takes you to my locally hosted version of this website.</li>
-      <li>
+      <li><a href="/readme">README</a> - Takes you to my README page.</li>      <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
       </li>
