--- a/content/radio/index.html
+++ b/content/radio/index.html
@@ -2,6 +2,13 @@
     <div>
         <div>
             <div class="about">
+                <div>
+                    <div style="background: #ed9458; border-radius: 25px;
+                    font-size: 20px; 
+                    padding: 10px; 
+                    border: 1px solid #FFFFFF; 
+                    margin: 10px;">
+                    <div>
             <div>
                 <p>Welcome to Mysty Radio</p>
             </div>
