--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -45,6 +45,9 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
+          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
+            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
+          </a>                    
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -68,6 +71,12 @@
 <main><main>
   <div class="about">
     <div>
+      <div style="background: #ed9458; border-radius: 25px;
+      font-size: 20px; 
+      padding: 10px; 
+      border: 1px solid #FFFFFF; 
+      margin: 10px;">
+      <div>
       <p>A list of all pages on my website.</p>
       <p>Some are hidden, like Eastereggs.</p>
       <li><a href="/">Home</a> - Takes you to my home page.</li>
@@ -75,9 +84,7 @@
       <li><a href="/projects">Projects</a> - Takes you to my Projects page.</li>
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
-      <li><a href="/readme">README</a> - Takes you to my README page.</li>
-      <li><a href="https://hugo.mysty.one/">Local Website</a> - Takes you to my locally hosted version of this website.</li>
-      <li>
+      <li><a href="/readme">README</a> - Takes you to my README page.</li>      <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
       </li>
