--- a/public/radio/index.html
+++ b/public/radio/index.html
@@ -45,6 +45,9 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
+          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
+            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
+          </a>                    
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -69,6 +72,13 @@
     <div>
         <div>
             <div class="about">
+                <div>
+                    <div style="background: #ed9458; border-radius: 25px;
+                    font-size: 20px; 
+                    padding: 10px; 
+                    border: 1px solid #FFFFFF; 
+                    margin: 10px;">
+                    <div>
             <div>
                 <p>Welcome to Mysty Radio</p>
             </div>
