setup a little 404 page

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -57,11 +57,7 @@
             <li><a class="btn btn-link-3" href="/projects">Projects</a></li>
             <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
             <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
-            <li>
-              <a class="btn btn-link-3" href="https://tayrp.substack.com/"
-                >Blog</a
-              >
-            </li>
+            <li><a class="btn btn-link-3" href="/credits">Credits</a></li>
           </ul>
         </div>
       </div>
@@ -84,6 +80,7 @@
       <li><a href="/projects">Projects</a> - Takes you to my Projects page.</li>
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
+      <li><a href="/credits">Credits</a> - Takes you to my credits page.</li>
       <li><a href="/readme">README</a> - Takes you to my README page.</li>      <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
@@ -98,13 +95,6 @@
 </main>
 
     <footer>
-      
-      Credits:
-      <a
-        href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background"
-        >Vecteezy.com</a
-      >
-      (Background)
       <div class="container">
         <div
           style="
@@ -112,9 +102,9 @@
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
-            padding: 10px;
+            padding: 12px;
             border: 1px solid #ffffff;
-            margin: 5px auto;
+            margin: 0px auto;
             text-align: center;
           "
         >
