--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -14,6 +14,7 @@
       <li><a href="/projects">Projects</a> - Takes you to my Projects page.</li>
       <li><a href="/discord">Discord</a> - Redirects you to my Discord.</li>
       <li><a href="/pages">Pages</a> - Takes you to this page.</li>
+      <li><a href="/credits">Credits</a> - Takes you to my credits page.</li>
       <li><a href="/readme">README</a> - Takes you to my README page.</li>      <li>
         <a href="https://docs.mysty.one/">GitBook</a> - Takes you to my GitBook
         website.
