--- a/public/about/index.html
+++ b/public/about/index.html
@@ -57,11 +57,7 @@
             <li><a class="btn btn-link-3" href="/projects">Projects</a></li>
             <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
             <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
-            <li>
-              <a class="btn btn-link-3" href="https://tayrp.substack.com/"
-                >Blog</a
-              >
-            </li>
+            <li><a class="btn btn-link-3" href="/credits">Credits</a></li>
           </ul>
         </div>
       </div>
@@ -208,13 +204,6 @@
 </main>
 
     <footer>
-      
-      Credits:
-      <a
-        href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background"
-        >Vecteezy.com</a
-      >
-      (Background)
       <div class="container">
         <div
           style="
@@ -222,9 +211,9 @@
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
-            padding: 10px;
+            padding: 12px;
             border: 1px solid #ffffff;
-            margin: 5px auto;
+            margin: 0px auto;
             text-align: center;
           "
         >
