--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -65,29 +65,22 @@
     
 
 <main><main>
-  <div class="about">
-    <div>
-      <body>
-        <div class="content">
-          <h2>
-            Look at this person eating their salad, You like this gif? You
-            should replicate it.
-          </h2>
-          <iframe
-            width="450"
-            height="350"
-            src="https://c.tenor.com/HZ_mu1zU3-UAAAAd/tenor.gif"
-            frameborder="0"
-            allowfullscreen
-            style="margin-left: 65px"
-          ></iframe>
-          <div id="images"></div>
-        </div>
-      </body>
+    <div class="about">
+      <div>
+        <div style="background: #ed9458; border-radius: 25px;
+        font-size: 20px; 
+        padding: 10px; 
+        border: 1px solid #FFFFFF; 
+        margin: 10px;">
+        <div>
+        <p>Here is where credits will be, such as profile pictures, assets, website assets, etc.</p>
+        <li><a href="https://picrew.me/en/image_maker/1487318">ぺけぺけぺけⅡ</a> - Credits to <a href="https://profcard.info/u/3JBo4MNkznbJV3CILaI1otWJ5uI3">旻 (Nichibun)</a> for some profile pictures I use.</li>
+        <li><a href="https://picrew.me/en/image_maker/1487318">ぺけぺけぺけⅡ</a> - Credits to <a href="">BlazingBRO</a> for my MinecraftLIVE style profile picture.</li>
+        <li><a href="https://www.vecteezy.com/">Vecteezy</a> - Credits to Vecteezy for the <a href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background">october background</a> I used in 2024</li>
+      </div>
     </div>
-  </div>
-</main>
-</main>
+  </main>
+  </main>
 
     <footer>
       <div class="container">
