--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -21,7 +21,7 @@
       </li>
       <li>
         <a href="https://tayrp.substack.com/">Blog</a> - Takes you to my
-        Substack.
+        Substack. (Inactive)
       </li>
     </div>
   </div>
