Reformatted files, Updates to CSS, About video.

--- a/content/credits/index.html
+++ b/content/credits/index.html
@@ -1,16 +1,9 @@
 <main>
-    <div class="about">
-      <div>
-        <div style="background: #ed9458; border-radius: 25px;
-        font-size: 20px; 
-        padding: 10px; 
-        border: 1px solid #FFFFFF; 
-        margin: 10px;">
-        <div>
+    <div class="bgbox">
         <p>Here is where credits will be, such as profile pictures, assets, website assets, etc.</p>
         <li><a href="https://picrew.me/en/image_maker/1487318">ぺけぺけぺけⅡ</a> - Credits to <a href="https://profcard.info/u/3JBo4MNkznbJV3CILaI1otWJ5uI3">旻 (Nichibun)</a> for some profile pictures I use.</li>
-        <li><a href="https://picrew.me/en/image_maker/1487318">ぺけぺけぺけⅡ</a> - Credits to <a href="">BlazingBRO</a> for my MinecraftLIVE style profile picture.</li>
-        <li><a href="https://www.vecteezy.com/">Vecteezy</a> - Credits to Vecteezy for the <a href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background">october background</a> I used in 2024</li>
+        <li><a href=""></a> - Credits to <a href="">BlazingBRO</a> for my MinecraftLIVE style profile picture.</li>
+        <li><a href="https://www.vecteezy.com/">Vecteezy</a> - Credits to Vecteezy for the <a href="https://www.vecteezy.com/vector-art/27207156-hand-drawn-flat-halloween-night-background">october background</a> I used in 2024, As well as for the current background.</li>
       </div>
     </div>
   </main>
