--- a/content/discord/index.html
+++ b/content/discord/index.html
@@ -1,6 +1,6 @@
 <main>
 <div>
-    <div class="about">
+    <div class="bgbox">
         <div>
             <p>
             <p>If you have not been redirected to my Discord within 3 seconds.</p>
