--- a/content/projects/index.html
+++ b/content/projects/index.html
@@ -1,12 +1,6 @@
 <main>
   <div class="pl">
-    <div>
-      <div style="background: #ed9458; border-radius: 25px;
-      font-size: 20px; 
-      padding: 10px; 
-      border: 1px solid #FFFFFF; 
-      margin: 10px;">
-      <div>
+    <div class="bgbox">
     <ul class="plul">
       <b>Here is a list of all my projects.</b>
       <li>
