--- a/content/radio/index.html
+++ b/content/radio/index.html
@@ -1,14 +1,8 @@
 <main>
     <div>
         <div>
-            <div class="about">
+            <div class="bgbox">
                 <div>
-                    <div style="background: #ed9458; border-radius: 25px;
-                    font-size: 20px; 
-                    padding: 10px; 
-                    border: 1px solid #FFFFFF; 
-                    margin: 10px;">
-                    <div>
             <div>
                 <p>Welcome to Mysty Radio</p>
             </div>
