--- a/public/about/index.html
+++ b/public/about/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
+    <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
   </head>
 
   <body>
@@ -45,9 +45,15 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
-          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
-            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
-          </a>                    
+          <a
+            style="margin-left: 59px; margin-top: 7px; display: inline-block"
+            href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml"
+          >
+            <img
+              src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main"
+              alt="Deploy Hugo site to Pages"
+            />
+          </a>
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -70,13 +76,7 @@
     <div>
       <body>
         <div class="content">
-          <div>
-            <div style="background: #ed9458; border-radius: 25px;
-            font-size: 20px; 
-            padding: 10px; 
-            border: 1px solid #FFFFFF; 
-            margin: 10px;">
-            <div>
+          <div class="bgbox">
           <h1>Hiya, Call me Tee!</h1>
           <iframe
             width="570"
@@ -84,48 +84,53 @@
             src="https://lanyard.cnrad.dev/api/1050531216589332581"
             frameborder="0"
             allowfullscreen="false"
-            style="margin-left: 15px"
+            style="margin-left: 0px"
           ></iframe>
-          <!-- <h4>Someone told me I had shit taste in music when I showed them this song, so I put it on my website, Fuck you.</h4> -->
           <div id="images">
+            <a href="https://discord.gg/gjypyNkPPp" target="_blank"
+            ><img
+              src="/assets/imgs/haven.png"
+              class="social-logo"
+              alt="Haven Community"
+          /></a>
             <a
               href="https://discord.com/users/1050531216589332581"
               target="_blank"
               ><img
-                src="/assets/imgs/october/discord.png"
+                src="/assets/imgs/socials/discord.png"
                 class="social-logo"
                 alt="Discord"
             /></a>
             <a href="https://github.com/tayrp" target="_blank"
               ><img
-                src="/assets/imgs/october/github.png"
+                src="/assets/imgs/socials/github.png"
                 class="social-logo"
                 alt="Github"
             /></a>
-            <a href="https://discord.gg/gjypyNkPPp" target="_blank"
-              ><img
-                src="/assets/imgs/haven.png"
-                class="social-logo"
-                alt="Haven"
-            /></a>
             <a href="https://www.last.fm/user/MystixMew" target="_blank"
               ><img
-                src="/assets/imgs/october/lastfm.png"
+                src="/assets/imgs/socials/lastfm.png"
                 class="social-logo"
                 alt="Last.fm"
             /></a>
             <a href="https://www.youtube.com/@MystixMew" target="_blank"
               ><img
-                src="/assets/imgs/october/youtube.png"
+                src="/assets/imgs/socials/youtube.png"
                 class="social-logo"
                 alt="YouTube"
             /></a>
+            <a href="https://namemc.com/profile/MystixMew.1" target="_blank"
+            ><img
+              src="/assets/imgs/socials/namemc.png"
+              class="social-logo"
+              alt="NameMC"
+          /></a>
             <!-- <a class="btn btn-link-3" button id="aboutpauseBtn" onclick="togglePause()">⏸️</a></p> -->
           </div>
         </div>
         <video autoplay loop id="aboutvideo">
           <source
-            src="https://index.havenmc.org/website/assets/mp4/thisishalloween.mp4"
+            src="https://index.havenmc.org/website/assets/mp4/usurper.mp4"
             type="video/mp4"
           />
           This browser does not support HTML5 video or the server is offline.
@@ -148,7 +153,7 @@
           style="
             font-size: 27px;
             padding: 0;
-            color: #FC4C02;
+            color: #a81cbe;
             width: 30px;
             height: 30px;
             line-height: 27px;
@@ -207,7 +212,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #ff96b4;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
