--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
+    <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
   </head>
 
   <body>
@@ -46,9 +46,15 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
-          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
-            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
-          </a>                    
+          <a
+            style="margin-left: 59px; margin-top: 7px; display: inline-block"
+            href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml"
+          >
+            <img
+              src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main"
+              alt="Deploy Hugo site to Pages"
+            />
+          </a>
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -65,29 +71,26 @@
     </nav>
     
 <main>
-  <div class="about">
-    <div style="background: #ed9458; border-radius: 25px;
-            font-size: 20px; 
-            padding: 10px; 
-            border: 1px solid #FFFFFF; 
-            margin: 10px;">
-            <div>
-              <b id="date-time">time</b>
-              <script src="/assets/js/timezone.js"></script>
-              <p>Hello and Welcome, You may call me Tee.</p>
-              <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
-              <p>My preferred pronouns are She/They</p>
-              <p>
-                Shows & Movies I like include, Doctor Who, DC Universe, Marvel Universe.
-              </p>
-              <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
-              <p style="font-size: 20px">
-                <a href="https://nohello.net/en/">NoHello</a> |
-                <a href="https://dontasktoask.com/">DontAskToAsk</a> |
-                <a href="https://xyproblem.info/">XYProblem</a>
-              </p>
-            </div>
-</div>
+  <div class="bgbox">
+      <div class="home">
+        <b id="date-time">time</b>
+        <script src="/assets/js/timezone.js"></script>
+        <p>Hello and Welcome, You may call me Tee.</p>
+        <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
+        <p>My preferred pronouns are She/They</p>
+        <p>
+          Shows & Movies I like include, Doctor Who, DC Universe, Marvel
+          Universe.
+        </p>
+        <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
+        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a> and <a href="https://discord.gg/circuit">Circuit V2</a></p>
+        <p style="font-size: 20px">
+          <a href="https://nohello.net/en/">NoHello</a> |
+          <a href="https://dontasktoask.com/">DontAskToAsk</a> |
+          <a href="https://xyproblem.info/">XYProblem</a>
+        </p>
+      </div>
+    </div>
   </div>
 </main>
 
@@ -95,7 +98,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #ff96b4;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
