--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
+    <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
   </head>
 
   <body>
@@ -45,9 +45,15 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
-          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
-            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
-          </a>                    
+          <a
+            style="margin-left: 59px; margin-top: 7px; display: inline-block"
+            href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml"
+          >
+            <img
+              src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main"
+              alt="Deploy Hugo site to Pages"
+            />
+          </a>
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -66,13 +72,7 @@
 
 <main><main>
   <div class="about">
-    <div>
-      <div style="background: #ed9458; border-radius: 25px;
-      font-size: 20px; 
-      padding: 10px; 
-      border: 1px solid #FFFFFF; 
-      margin: 10px;">
-      <div>
+    <div class="bgbox">
       <p>A list of all pages on my website.</p>
       <p>Some are hidden, like Eastereggs.</p>
       <li><a href="/">Home</a> - Takes you to my home page.</li>
@@ -87,7 +87,7 @@
       </li>
       <li>
         <a href="https://tayrp.substack.com/">Blog</a> - Takes you to my
-        Substack.
+        Substack. (Inactive)
       </li>
     </div>
   </div>
@@ -98,7 +98,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #ff96b4;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
