--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -1,12 +1,6 @@
 <main>
   <div class="about">
-    <div>
-      <div style="background: #ed9458; border-radius: 25px;
-      font-size: 20px; 
-      padding: 10px; 
-      border: 1px solid #FFFFFF; 
-      margin: 10px;">
-      <div>
+    <div class="bgbox">
       <p>A list of all pages on my website.</p>
       <p>Some are hidden, like Eastereggs.</p>
       <li><a href="/">Home</a> - Takes you to my home page.</li>
