--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
+    <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
   </head>
 
   <body>
@@ -45,9 +45,15 @@
             />
             <script src="/assets/js/lanyard.js"></script>
           </a>
-          <a style="margin-left: 59px; margin-top: 7px; display: inline-block;" href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml">
-            <img src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main" alt="Deploy Hugo site to Pages" />
-          </a>                    
+          <a
+            style="margin-left: 59px; margin-top: 7px; display: inline-block"
+            href="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml"
+          >
+            <img
+              src="https://github.com/tayrp/tayrp.github.io/actions/workflows/hugo.yml/badge.svg?branch=main"
+              alt="Deploy Hugo site to Pages"
+            />
+          </a>
           <link rel="home" href="/" />
         </div>
         <div class="collapse navbar-collapse" id="top-navbar-1">
@@ -66,13 +72,7 @@
 
 <main><main>
   <div class="pl">
-    <div>
-      <div style="background: #ed9458; border-radius: 25px;
-      font-size: 20px; 
-      padding: 10px; 
-      border: 1px solid #FFFFFF; 
-      margin: 10px;">
-      <div>
+    <div class="bgbox">
     <ul class="plul">
       <b>Here is a list of all my projects.</b>
       <li>
@@ -89,7 +89,7 @@
       <div class="container">
         <div
           style="
-            background: #ed9458;
+            background: #ff96b4;
             border-radius: 25px;
             font-size: 20px;
             width: 650px;
