I fixed the borked logo that I broke

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -17,7 +17,7 @@
           <div id="images">
             <a href="https://discord.gg/gjypyNkPPp" target="_blank"
             ><img
-              src="/assets/imgs/haven.png"
+              src="/assets/imgs/socials/haven.png"
               class="social-logo"
               alt="Haven Community"
           /></a>
